--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
             <h2>⚠️ تحذير!</h2>
             <p>هذه اللعبة لا علاقة لها بأدات TELMEDEYN</p>
             <button id="proceedBtn" class="btn-primary">متابعة</button>
-            <button id="exitBtn" class="btn-secondary">خروج</button>
         </div>
     </div>
 
     <!-- واجهة اللعبة -->
     <div id="gameContainer" class="hidden">
         <h1>هذه لعبة قذرة لكنها ليست أقذر من أفكاركم</h1>
+
         <div class="question" data-index="0">
             <p>ماهو الرشيد بالنسبة لك؟</p>
             <button class="answerBtn" data-value="0">مكان مررت به</button>
@@ -27,20 +27,23 @@
             <button class="answerBtn" data-value="2">قرية منفوخة إعلاميا</button>
             <button class="answerBtn" data-value="3">مكان تربطني به ذكريات</button>
         </div>
+
         <div class="question" data-index="1">
             <p>إلى أي جماعة تنتمي؟</p>
             <button class="answerBtn" data-value="0">الجماعة ذوك</button>
             <button class="answerBtn" data-value="1">الجماعة الأخرى</button>
             <button class="answerBtn" data-value="2">ماني أمركهم فشي كاملين</button>
         </div>
+
         <div class="question" data-index="2">
             <p>أيهم تنافق له؟</p>
             <button class="answerBtn" data-value="0">ألا ايهم مسْ لبنتو</button>
             <button class="answerBtn" data-value="1">كاملين</button>
             <button class="answerBtn" data-value="2">المهم ألا الإستفادة</button>
         </div>
+
         <div class="question" data-index="3">
-            <p>هل أنت غبي وتصدق كل ما تقرأه او تسمعه دون تحليل حيادي؟</p>
+            <p>هل أنت غبي وتصدق كل ما تقرأه أو تسمعه دون تحليل حيادي؟</p>
             <button class="answerBtn" data-value="0">نعم</button>
             <button class="answerBtn" data-value="1">واللهي</button>
             <button class="answerBtn" data-value="2">حك بعد</button>
