--- a/index.html
+++ b/index.html
@@ -1,74 +1,49 @@
 <!DOCTYPE html>
 <html lang="ar" dir="rtl">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>لعبة نفسية ساخرة</title>
-<link rel="stylesheet" href="style.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>لعبة تحليل سلوكي</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
-<!-- نافذة التحذير -->
-<div id="warningOverlay" class="overlay active">
-    <div class="warning-box">
-        <h2>⚠️ تحذير!</h2>
-        <p>هذه اللعبة لا علاقة لها بأدات TELMEDEYN</p>
-        <button id="proceedBtn" class="btn-primary">متابعة</button>
-    </div>
-</div>
-
-<!-- واجهة اللعبة -->
-<div id="gameContainer" class="hidden">
-    <h1>هذه لعبة قذرة لكنها ليست أقذر من أفكاركم</h1>
-
-    <div class="question" data-index="0">
-        <p>ماهو الرشيد بالنسبة لك؟</p>
-        <button class="answerBtn" data-value="0">مكان مررت به</button>
-        <button class="answerBtn" data-value="1">قصة لم تنتهي بعد</button>
-        <button class="answerBtn" data-value="2">قرية منفوخة إعلاميا</button>
-        <button class="answerBtn" data-value="3">مكان تربطني به ذكريات</button>
+    <!-- نافذة التحذير الأولى -->
+    <div id="warningOverlay" class="overlay active">
+        <div class="popup warning-popup">
+            <h2>تنبيه</h2>
+            <p>هذه اللعبة لا علاقة لها بأدات TELMEDEYN. استعد لتجربة تحليل سلوكي.</p>
+            <button id="continueBtn" class="btn primary-btn">متابعة</button>
+            <button id="exitBtn" class="btn secondary-btn">الخروج من الموقع</button>
+        </div>
     </div>
 
-    <div class="question hidden" data-index="1">
-        <p>إلى أي جماعة تنتمي؟</p>
-        <button class="answerBtn" data-value="0">الجماعة ذوك</button>
-        <button class="answerBtn" data-value="1">الجماعة الأخرى</button>
-        <button class="answerBtn" data-value="2">ماني أمركهم فشي كاملين</button>
+    <!-- نافذة الأسئلة -->
+    <div id="questionOverlay" class="overlay">
+        <div class="popup question-popup">
+            <h2>هذه لعبة قذرة لكنها ليست أقذر من أفكاركم</h2>
+            <div id="questionContainer"></div>
+        </div>
     </div>
 
-    <div class="question hidden" data-index="2">
-        <p>أيهم تنافق له؟</p>
-        <button class="answerBtn" data-value="0">ألا ايهم مسْ لبنتو</button>
-        <button class="answerBtn" data-value="1">كاملين</button>
-        <button class="answerBtn" data-value="2">المهم ألا الإستفادة</button>
+    <!-- نافذة النتيجة -->
+    <div id="resultOverlay" class="overlay">
+        <div class="popup result-popup">
+            <h2>نتيجة التحليل السلوكي</h2>
+            <p id="resultText"></p>
+            <p id="countdownText">سيتم فتح نافذة المراسلة بعد: <span id="countdown">12</span> ثانية</p>
+        </div>
     </div>
 
-    <div class="question hidden" data-index="3">
-        <p>هل أنت غبي وتصدق كل ما تقرأه أو تسمعه دون تحليل حيادي؟</p>
-        <button class="answerBtn" data-value="0">نعم</button>
-        <button class="answerBtn" data-value="1">واللهي</button>
-        <button class="answerBtn" data-value="2">حك بعد</button>
+    <!-- نافذة Telegram -->
+    <div id="telegramOverlay" class="overlay">
+        <div class="popup telegram-popup">
+            <h2>أرسل رسالتك</h2>
+            <p>سيتم توجيه رسالتك مباشرة إلى المحادثة مع Sidahmed على تيليجرام.</p>
+            <textarea id="telegramMessage" placeholder="اكتب رسالتك هنا..."></textarea>
+            <button id="sendTelegram" class="btn primary-btn">إرسال</button>
+        </div>
     </div>
-</div>
 
-<!-- نافذة النتيجة -->
-<div id="resultOverlay" class="overlay hidden">
-    <div class="result-box">
-        <h2>نتيجة التحليل السلوكي</h2>
-        <p id="resultText"></p>
-        <p>العد التنازلي: <span id="countdown">12</span> ثانية</p>
-    </div>
-</div>
-
-<!-- نافذة تيليجرام -->
-<div id="telegramOverlay" class="overlay hidden">
-    <div class="telegram-box">
-        <h2>أرسل رسالة إلى SidAhmed</h2>
-        <input type="text" id="telegramMessage" placeholder="اكتب رسالتك هنا">
-        <button id="sendTelegram" class="btn-primary">إرسال</button>
-    </div>
-</div>
-
-<script src="script.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
