--- a/index.html
+++ b/index.html
@@ -3,44 +3,45 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>لعبة تحليل سلوكي</title>
+    <title>هذه اللعبة لا علاقة لها بأدات TELMEDEYN</title>
+    <link href="https://fonts.googleapis.com/css2?family=Tajawal:wght@300;400;500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <!-- نافذة التحذير الأولى -->
-    <div id="warningOverlay" class="overlay active">
-        <div class="popup warning-popup">
-            <h2>تنبيه</h2>
-            <p>هذه اللعبة لا علاقة لها بأدات TELMEDEYN. استعد لتجربة تحليل سلوكي.</p>
-            <button id="continueBtn" class="btn primary-btn">متابعة</button>
-            <button id="exitBtn" class="btn secondary-btn">الخروج من الموقع</button>
+
+    <!-- نافذة التحذير -->
+    <div id="warning-modal" class="modal show">
+        <div class="modal-content warning">
+            <h2>تحذير</h2>
+            <p>هذه اللعبة لا علاقة لها بأدات TELMEDEYN. هل أنت مستعد لمواجهة الأسئلة؟</p>
+            <button id="start-btn" class="btn">متابعة</button>
         </div>
     </div>
 
     <!-- نافذة الأسئلة -->
-    <div id="questionOverlay" class="overlay">
-        <div class="popup question-popup">
+    <div id="quiz-modal" class="modal">
+        <div class="modal-content quiz">
             <h2>هذه لعبة قذرة لكنها ليست أقذر من أفكاركم</h2>
-            <div id="questionContainer"></div>
+            <div id="quiz-container"></div>
+            <button id="submit-quiz" class="btn">إرسال الإجابات</button>
         </div>
     </div>
 
-    <!-- نافذة النتيجة -->
-    <div id="resultOverlay" class="overlay">
-        <div class="popup result-popup">
+    <!-- نافذة النتائج -->
+    <div id="result-modal" class="modal">
+        <div class="modal-content result">
             <h2>نتيجة التحليل السلوكي</h2>
-            <p id="resultText"></p>
-            <p id="countdownText">سيتم فتح نافذة المراسلة بعد: <span id="countdown">12</span> ثانية</p>
+            <p id="result-text"></p>
+            <p id="countdown">12</p>
         </div>
     </div>
 
     <!-- نافذة Telegram -->
-    <div id="telegramOverlay" class="overlay">
-        <div class="popup telegram-popup">
-            <h2>أرسل رسالتك</h2>
-            <p>سيتم توجيه رسالتك مباشرة إلى المحادثة مع Sidahmed على تيليجرام.</p>
-            <textarea id="telegramMessage" placeholder="اكتب رسالتك هنا..."></textarea>
-            <button id="sendTelegram" class="btn primary-btn">إرسال</button>
+    <div id="telegram-modal" class="modal">
+        <div class="modal-content telegram">
+            <h2>أرسل رسالتك إلى SidAhmed</h2>
+            <textarea id="telegram-message" placeholder="اكتب رسالتك هنا"></textarea>
+            <button id="send-telegram" class="btn">إرسال إلى تيليجرام</button>
         </div>
     </div>
 
