--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 
-<div id="warning-modal" class="modal warning show">
+<div id="warning-modal" class="modal warning">
     <h2>تحذير</h2>
     <p>هذه اللعبة لا علاقة لها بأي أداة أخرى.</p>
     <button id="start-btn" class="submit-btn">متابعة</button>
