--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 </head>
 <body>
 
+<div class="overlay"></div>
+
 <div id="warning-modal" class="modal warning">
     <h2>تحذير</h2>
     <p>هذه اللعبة لا علاقة لها بأي أداة أخرى.</p>
