--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ar" dir="rtl">
 <head>
     <meta charset="UTF-8">
-    <title>لعبة تحليل سلوكي</title>
+    <title>تلمدين</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Tajawal:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
@@ -13,18 +13,18 @@
 
 <div id="warning-modal" class="modal warning">
     <h2>تحذير</h2>
-    <p>هذه اللعبة لا علاقة لها بأي أداة أخرى.</p>
+    <p>هذا الإستطلاع لا علاقة له بأدات تلمدين الأصلية.</p>
     <button id="start-btn" class="submit-btn">متابعة</button>
 </div>
 
 <div id="quiz-modal" class="modal quiz">
-    <h2>هذه لعبة قذرة</h2>
+    <h2>هذه لعبة قذرة لكنها ليست أقذر من أفكاركم</h2>
     <div id="quiz-container"></div>
     <button id="submit-quiz" class="submit-btn">إرسال الإجابات</button>
 </div>
 
 <div id="result-modal" class="modal result">
-    <h2>نتيجة التحليل</h2>
+    <h2>نتيجة تهورك</h2>
     <p id="result-text"></p>
     <p id="countdown" class="countdown">12</p>
 </div>
