--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <div id="warning-modal" class="modal warning">
     <h2>تحذير</h2>
-    <p>هذا الإستطلاع أو اللعبة أو أيا يكن لا علاقة له بأدات تلمدين الأصلية.</p>
+    <p>هذا الإستطلاع أو اللعبة أو أيا يكن لا علاقة له بأداة تلمدين الأصلية.</p>
     <button id="start-btn" class="submit-btn">متابعة</button>
 </div>
 
