--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ar" dir="rtl">
 <head>
     <meta charset="UTF-8">
-    <title>تلمدين</title>
+    <title>أهل الرشيد</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Tajawal:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
@@ -12,7 +12,7 @@
 <div class="overlay"></div>
 
 <div id="warning-modal" class="modal warning">
-    <h2>تحذير</h2>
+    <h2>تلمدين أهل الرشيد</h2>
     <p>هذا الإستطلاع أو اللعبة أو أيا يكن لا علاقة له بأداة تلمدين الأصلية.</p>
     <button id="start-btn" class="submit-btn">متابعة</button>
 </div>
