--- a/index.html
+++ b/index.html
@@ -12,13 +12,16 @@
 <div class="overlay"></div>
 
 <div id="warning-modal" class="modal warning">
-    <h2>تلمدين أهل الرشيد</h2>
-    <p>هذا الإستطلاع أو اللعبة أو أيا يكن لا علاقة له بأداة تلمدين الأصلية.</p>
+    <h2>تلمدين أهل الرشيد يفظمه</h2>
+    <p>لا توجد إجابات صحيحة
+هذا المكان لا يراعي حساسيتك ولا خصوصيتك و لا يحترمها
+و ليس ترفيهيا ولا تجربة مستخدم بقدر ماهو إنعكاس لشيء أكبر
+وإن أكملت و ضغطت على زر متابعة فأنت تقبل النتيجة مسبقًا بلا اعتراض و لا حق مراجعة.</p>
     <button id="start-btn" class="submit-btn">متابعة</button>
 </div>
 
 <div id="quiz-modal" class="modal quiz">
-    <h2>هذه لعبة قذرة لكنها ليست أقذر من أفكاركم</h2>
+    <h2>لعبة قذرة لكنها ليست أقذر من أفكاركم البدائية</h2>
     <div id="quiz-container"></div>
     <button id="submit-quiz" class="submit-btn">إرسال الإجابات</button>
 </div>
@@ -30,7 +33,7 @@
 </div>
 
 <div id="telegram-modal" class="modal telegram">
-    <h2>أرسل رسالتك</h2>
+    <h2>أكتب رسالة لن أقرأها</h2>
     <textarea id="telegram-message"></textarea>
     <button id="send-telegram" class="submit-btn">إرسال</button>
 </div>
