--- a/index.html
+++ b/index.html
@@ -13,17 +13,17 @@
 
 <div id="warning-modal" class="modal warning">
     <h2>تلمدين أهل الرشيد يفظمه</h2>
-    <p>لا توجد إجابات صحيحة
-هذا المكان لا يراعي حساسيتك ولا خصوصيتك و لا يحترمها
-و ليس ترفيهيا ولا تجربة مستخدم بقدر ماهو إنعكاس لشيء أكبر
-وإن أكملت و ضغطت على زر متابعة فأنت تقبل النتيجة مسبقًا بلا اعتراض و لا حق مراجعة.</p>
+    <p>لا توجد إجابات صحيحة و لا خاطئة
+هذا المكان لا يراعي حساسيتك و لا خصوصيتك و لا يحترمها
+و ليس ترفيهيا و لا تجربة مستخدم بقدر ماهو إنعكاس لشيء أكبر
+و إن أكملت و ضغطت على زر متابعة فأنت تقبل النتيجة مسبقًا بلا اعتراض و لا حق مراجعة.</p>
     <button id="start-btn" class="submit-btn">متابعة</button>
 </div>
 
 <div id="quiz-modal" class="modal quiz">
     <h2>لعبة قذرة لكنها ليست أقذر من أفكاركم البدائية</h2>
     <div id="quiz-container"></div>
-    <button id="submit-quiz" class="submit-btn">إرسال الإجابات</button>
+    <button id="submit-quiz" class="submit-btn">متابعة</button>
 </div>
 
 <div id="result-modal" class="modal result">
