--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <h2>تلمدين أهل الرشيد يفظمه</h2>
     <p>لا توجد إجابات صحيحة و لا خاطئة
 هذا المكان لا يراعي حساسيتك و لا خصوصيتك و لا يحترمها
-و ليس ترفيهيا و لا تجربة مستخدم بقدر ماهو إنعكاس لشيء أكبر
+و ليس ترفيهيا و لا تجربة مستخدم بقدر ماهو مرآة لشيء خارج نطاق وعيك المحدود
 و إن أكملت و ضغطت على زر متابعة فأنت تقبل النتيجة مسبقًا بلا اعتراض و لا حق مراجعة.</p>
     <button id="start-btn" class="submit-btn">متابعة</button>
 </div>
